Group_01_FinalProject/FinalProject.cydsn/BUILD.log
--------------- Build Started: 05/27/2020 10:48:24 Project: FinalProject, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\annat\AppData\Local\Cypress Semiconductor\PSoC Creator\4.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\annat\OneDrive\Desktop\Group_01_FinalProject\Group_01_FinalProject\FinalProject.cydsn\FinalProject.cyprj -d CY8C5888LTI-LP097 -s C:\Users\annat\OneDrive\Desktop\Group_01_FinalProject\Group_01_FinalProject\FinalProject.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Info: plm.M0038: The pin named INT_LIS3DH(0) at location P12[4] prevents usage of special purposes: I2C:SCL. (App=cydsfit)
Analog Placement...
Info: apr.M0002: Analog signal "\ADC_DelSig:Net_35\" is connected to one terminal only. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/InterruptRoutines.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c InterruptRoutines.c -o .\CortexM3\ARM_GCC_541\Debug\InterruptRoutines.o
In file included from InterruptRoutines.c:12:0:
InterruptRoutines.h:24:15: error: expected identifier or '(' before numeric constant
     #define T 2
               ^
Generated_Source\PSoC5/core_cm3.h:264:14: note: in expansion of macro 'T'
     uint32_t T:1;                        /*!< bit:     24  Thumb bit */
              ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/27/2020 10:50:28 ---------------
